# cyprus-geo-tma

./: .env.example  .gitignore  README.md  docker-compose.yml  setup_workspace.sh  start.ps1  wm_precise_checkpoint.json
db/: Dockerfile  migrate.py  requirements.txt  reset.bat  reset.sh
db/migrations/: 0001_init_extensions.sql  0002_users.sql  0003_places.sql  0004_messages.sql  0005_p0_enhancements.sql  0006_p1_reviews.sql  0007_mvt_optimization.sql  0008_p1_favorites_profile.sql  0009_p1_reactions.sql  0010_geom_3857_stored.sql  0011_geom_simplified.sql
db/seeds/: seed_places.py
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTEXT.md  DECISIONS.md  GENSPARK_AUDIT.md  OPEN_QUESTIONS.md  PRODUCT_SPEC.md
infra/nginx/: nginx.conf
prompts/: agent_1_data.md  agent_2_db.md  agent_3_backend.md  agent_4_frontend.md  agent_5_devops.md  genspark_feature_design.md
scripts/: categorize-places.sql  categorize.sql  debug-wikimapia-network.js  diag-wikimapia.js  fill-geom-columns.sql  fix-geom-simplification.sql  import-osm.js  import-wikimapia-kml.js  import-wikimapia-precise.js  import-wikimapia.js  inspect-pm.js  package-lock.json  package.json  raw_kml_sample.xml  scrape-wikimapia-browser.js  test-parse-kml.js  warmup-tiles.js  wm_kml_checkpoint.json
scripts/scripts/: wm_browser_checkpoint.json
services/backend/: Dockerfile  package-lock.json  package.json
services/frontend/: Dockerfile  index.html  (+3 more)
services/scraper/: README.md  pyproject.toml
services/scraper/src/scraper/: __init__.py  __main__.py  api_client.py  config.py  converter.py  grid.py  main.py  validate.py
(+70 files in other folders)
